// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backstage <Backstage /> renders correctly 1`] = `
<Fragment>
  <Backstage
    isOpen={true}
    onClose={[Function]}
    showOverlay={true}
  />
  <div
    onClick={[Function]}
  />
</Fragment>
`;

exports[`Backstage <Backstage /> with child items 1`] = `
<Fragment>
  <Backstage
    isOpen={true}
    items={
      Array [
        <CommandLaunchBackstageItem
          commandHandler={
            Object {
              "execute": [Function],
              "messageId": "",
              "parameters": null,
            }
          }
          commandId="my-command-id"
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
        />,
        <SeparatorBackstageItem />,
        <FrontstageLaunchBackstageItem
          frontstageId="Test1"
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
        />,
        <SeparatorBackstageItem />,
        <TaskLaunchBackstageItem
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
          taskId="Task1"
          workflowId="ExampleWorkflow"
        />,
      ]
    }
    onClose={[Function]}
    showOverlay={true}
  />
  <div
    onClick={[Function]}
  />
</Fragment>
`;
